test/libsolidity/syntaxTests/metaTypes/typeNotRegularIdentifierParameter.sol
contract Test {
    function f(uint type) public pure {
    }
}
// ----
// ParserError 2314: (36-40='type'): Expected ',' but got 'type'
